# DEInference

./: .gitignore  Anchor.toml  README.md  example_task.json  package-lock.json  package.json  tsconfig.json
programs/deinference/: Cargo.toml
programs/deinference/src/: error.rs  lib.rs  state.rs  verify.rs
programs/deinference/src/instructions/: aggregate.rs  close_account.rs  close_state_account.rs  get_model.rs  mint_to_collection.rs  mint_to_task.rs  mod.rs  post_request.rs  submit_pred.rs
programs/deinference/src/instructions/setup/: create_task.rs  create_tree.rs  initialize.rs  mod.rs
programs/knowledge-manager/: Cargo.toml
programs/knowledge-manager/src/: lib.rs
programs/knowledge-manager/src/instructions/: close_state_account.rs  create_tree.rs  initialize.rs  mint.rs  mint_to_collection.rs  mod.rs
scripts/: fund.ts
src/: createTree.ts  main.ts  mint.ts  setup.ts
tests/: deinference.ts  knowledge-manager.ts
wallets/: test_user.json
