[package]
name = "knowledge_manager"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "knowledge_manager"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build"]


[dependencies]
anchor-lang = "0.30.1"
anchor-spl = "0.30.1"
mpl-bubblegum = "1.4.0"
mpl-core = "0.8.0"
mpl-token-metadata = "5.1.0"
spl-account-compression = "0.4.2"
